<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/outline_dashboard_black_18dp"
        android:title="@string/title_genre"
        android:iconTint="@color/black"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_black_18dp"
        android:title="@string/title_home"
        android:iconTint="@color/black"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_search_black_18dp"
        android:title="@string/title_search"
        android:iconTint="@color/black"
        android:checked="true"/>
</menu>