<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="379dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/img_desc" />

    <TextView
        android:id="@+id/realisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/realisateur" />

    <TextView
        android:id="@+id/nom_real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="variable_liste_real" />

    <TextView
        android:id="@+id/acteurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/acteurs" />

    <TextView
        android:id="@+id/nom_acteurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:text="variable_liste_acteurs" />

    <TextView
        android:id="@+id/descritpion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/descritpion_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="variable_retour-description" />

</GridLayout>